# betise

./: .gitignore  APPENDIX.md  CHANGELOG.md  CONTRIBUTING.md  README.md  USAGE.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
betise/: __init__.py  dataset_generation.py
betise/config/: __init__.py  dataset.json  params.json
betise/core/: generator.py  metadata.py
betise/utils/: __init__.py  helpers.py
examples/: 00_introduction.ipynb  01_quickstart.py  02_benchmark_dataset.py  03_feature_suite.py  04_pretraining_dataset.py  05_classification_dataset.py  06_load_and_use.py  07_feature_gallery.py  08_combinations_gallery.py
examples/configs/: classification_config.json
examples/data/: combinations.csv
tests/: test_features.py  test_generators.py  test_pipeline.py
