[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "betise"
version = "0.2.0"
description = "BeTiSe — Benchmark Time Series Generator for synthetic dataset creation"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Pınar Cemre Yazıcı" },
    { name = "Pelin Erkaya" },
    { name = "Yağmur Türkmen" },
    { name = "İsmail Güzel", email = "ismailgzel@gmail.com" },
    { name = "Pınar Karagöz" },
    { name = "Ceylan Yozgatlıgil" },
]
keywords = [
    "time-series",
    "synthetic-data",
    "dataset-generation",
    "benchmark",
    "arima",
    "garch",
    "anomaly-detection",
    "machine-learning",
    "forecasting",
    "stationarity",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "statsmodels>=0.13",
    "arch>=5.0",
    "pyarrow>=7.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.4",
    "tqdm>=4.60",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "matplotlib>=3.4",
    "tqdm>=4.60",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage      = "https://github.com/ismailguzel/betise"
Repository    = "https://github.com/ismailguzel/betise"
"Bug Tracker" = "https://github.com/ismailguzel/betise/issues"
Dataset       = "https://doi.org/10.5281/zenodo.18513505"

[tool.setuptools.packages.find]
where = ["."]
include = ["betise*"]

[tool.setuptools.package-data]
betise = ["config/*.json"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
